Update Level 2 - Lesson 8 - Delhi Hotel Page.html

--- a/Level 2 - Lesson 8 - Delhi Hotel Page.html
+++ b/Level 2 - Lesson 8 - Delhi Hotel Page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,29 +34,18 @@ Border-collapse: collapse;}
 
 .table-class tbody{tr:nth-child(even){background-color: PaleGreen;}
 
-.table-class tfoot td{
-Padding: 6px;
-Background-color: Turquoise;
-Text-align: center;}
-
-a:link{color:white;
-Text-decoration: none;}
-
-
-a:hover{color: LightSteelBlue;
-Text-decoration: underline;}
-
 </style>
 </head>
 <body>
+<!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
 <header>
 <h1>Delhi</h1>
 <nav>
 <ul>
- <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html">Home</a></li>
- <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html">Hotels</a></li>
- <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html">Street Food</a></li>
- <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html">Contact Us</a></li>
+ <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
+ <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
+ <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
+ <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
 </ul>
 </nav>
 </header>
@@ -113,14 +101,15 @@ Text-decoration: underline;}
 </tr>
 <tfoot>
 <tr>
-<td colspan = "3">Hope these recommendations and details help you find the perfect hotel for your stay!</td>
+<td colspan = "3" align = "center" style = "background-color: Turquoise"><h4>Hope these recommendations and details help you find the perfect hotel for your stay!</h4></td>
 </tr> 
 </tfoot>
 </table>
 <footer>
-<h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank">Mindchamp</a></h3></footer>
+<h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank" style = "color: white">Mindchamp</a></h3></footer>
 </body>
 </html>
+
 
 
 
