Update Level 2 - Lesson 9 -Delhi Street Food Page.html

--- a/Level 2 - Lesson 9 -Delhi Street Food Page.html
+++ b/Level 2 - Lesson 9 -Delhi Street Food Page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,19 +32,16 @@ Width: 220px;
 transform:rotate(13.5deg);}
 .img-overlap{
 Position: relative;
-Height: 150px;
-Width: 245px;
+Height: 140px;
+Width: 235px;
 Margin: 5%;
 Left: 35.5%}
 .img-overlap img{
-Width: 245px;
-Height: 150px;
 Position: absolute;
 Transition: opacity 1s ease-in-out;}
 .img-overlap img.top:hover{
 Opacity: 0;
-Width: 245px;
-Height: 150px;}
+
 .foodstyle2{
 text-align: center;}
 .foodstyle2 img{
@@ -54,17 +50,11 @@ Width: 235px;}
 .foodstyle2 img:hover{
 Height: 180px;
 Width: 270px;
-body{background-color: PaleTurquoise;}
-
-a:link{color:white;
-Text-decoration: none;}
-
-
-a:hover{color: LightSteelBlue;
-Text-decoration: underline;}
+transform: rotate(12deg);}
 </style>
 </head>
 <body>
+<!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
 <!--So the #shadow is the id which is a unique name with a hashtag so not dot is required-->
 <!--For the first px of text shadow it is wether it goes left or right so - would be for the right and regular number would be left. So for top or bottom a regular number is bottom and - number would be top. Then you juts put 0px and the color-->
 <!--Putting ease means it going more smoothly or slowly, out without anything means it goes fast, so if you switch it out and write ease-out the ending will be smooth-->
@@ -72,10 +62,10 @@ Text-decoration: underline;}
 <h1>Delhi</h1> 
 <nav>
 <ul>
- <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html">Home</a></li>
- <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html">Hotels</a></li>
- <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html">Street Food</a></li>
- <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html">Contact Us</a></li>
+ <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
+ <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
+ <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
+ <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
 </ul>
 </nav>
 </header>
@@ -89,25 +79,15 @@ Text-decoration: underline;}
 <div class = "img-overlap">
 <img class = "bottom" src = "download.jpeg">
 <img class = "top" src = "download (1).jpeg">
-<h3>Samosas</h3>
 </div>
+<h3 align = "center">Samosas</h3>
 <br>
 <div class = "foodstyle2" align = "center">
 <img src = "Unknown1.jpeg">
 <h3>Chaat</h3>
 </div>
 <footer>
-<h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank">Mindchamp</a></h3></footer>
+<h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank" style = "color: white">Mindchamp</a></h3></footer>
+<!--So basically what I did by writing style = "color: white" after the target part is what you can do if you don't want all the links to be white.-->
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
