--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@ Text-align: "center";
 Font-family: Arial;
 padding: 20px;}
 
-a:link{color:white;
-Text-decoration: none;}
-
-a:hover{color: LightSteelBlue;
-Text-decoration: underline;}
-
 h1{text-align: center;}
 h2{text-align: center;
 background-color: CornflowerBlue;}
@@ -55,14 +49,15 @@ Width: 50%;}
 </style>
 </head>
 <body>
+<!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
 <header>
 <h1>Delhi</h1> 
 <nav>
 <ul>
- <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html">Home</a></li>
- <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html">Hotels</a></li>
- <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html">Street Food</a></li>
- <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html">Contact Us</a></li>
+ <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
+ <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
+ <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
+ <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
 </ul>
 </nav>
 </header>
@@ -92,6 +87,6 @@ Width: 50%;}
 <p>The Lotus Temple, located in New Delhi, India, is a Baháʼí House of Worship that was dedicated in December 1986. Notable for its lotus-like shape, it has become a prominent attraction in the city. The building is composed of 27 free-standing marble-clad "petals" arranged in clusters of three to form nine sides, with nine doors opening onto a central hall with a height of slightly over 34 metres and a capacity of 1,300 people. The Lotus Temple has won numerous architectural awards and has been featured in many newspaper and magazine articles.</p>
 </section>
 <footer>
-<h3>This website is made by <a href = "https://www.mindchamp.in" target = "_blank">Mindchamp</a></h3></footer>
+<h3>This website is made by <a href = "https://www.mindchamp.in" target = "_blank" style = "color: white">Mindchamp</a></h3></footer>
 </body>
 </html>
