Update Level 2 - Lesson 8 - Delhi Hotel Page.html

--- a/Level 2 - Lesson 8 - Delhi Hotel Page.html
+++ b/Level 2 - Lesson 8 - Delhi Hotel Page.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <style>
-Header{background-color: DarkSalmon;
+Header{background-color: Navy;
 Font-family: Times New Roman;
 Text-align: center;
 Width: 100%;
 Height: 120px;
 Font-weight: bold;
 Margin: 5px;}
-Footer{background-color: RoyalBlue;
+Footer{background-color: Navy;
 width: 100%;
 Color: white;
 Text-align: center;}
@@ -21,25 +21,25 @@ Margin: 10px;
 Align: center;}
 
 .table-class thead th{
-Background: rgb(50, 93, 129);
+Background: Maroon;
 Color: white;
 Padding: 5px;
 Border-collapse: collapse;}
 
 .table-class tbody td{
-Background-color: rgb(164, 194, 219);
+Background-color: rgb(118, 160, 239);
 Text-align: center;
 Padding: 5px;
 Border-collapse: collapse;}
 
-.table-class tbody{tr:nth-child(even){background-color: PaleGreen;}
 
 </style>
 </head>
 <body>
 <!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
+<!--You can put .table-class tbody{tr:nth-child(even){background-color: rgb(0, 153, 153);} but it doesn't work right now-->
 <header>
-<h1>Delhi</h1>
+<h1 style = "color: White">Delhi</h1>
 <nav>
 <ul>
  <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
@@ -101,7 +101,7 @@ Border-collapse: collapse;}
 </tr>
 <tfoot>
 <tr>
-<td colspan = "3" align = "center" style = "background-color: Turquoise"><h4>Hope these recommendations and details help you find the perfect hotel for your stay!</h4></td>
+<td colspan = "3" align = "center" style = "background-color: rgb(128, 191, 255)"><h4>Hope these recommendations and details help you find the perfect hotel for your stay!</h4></td>
 </tr> 
 </tfoot>
 </table>
@@ -109,13 +109,3 @@ Border-collapse: collapse;}
 <h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank" style = "color: white">Mindchamp</a></h3></footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
