Update Level 2 - Lesson 9 - Delhi Contact Us Page.html

--- a/Level 2 - Lesson 9 - Delhi Contact Us Page.html
+++ b/Level 2 - Lesson 9 - Delhi Contact Us Page.html
@@ -33,14 +33,15 @@ return true;
 }
 </script>
 <style>
-Header{background-color: DarkSalmon;
+Header{background-color: Navy;
 Font-family: Times New Roman;
 Text-align: center;
 Width: 100%;
 Height: 120px;
 Font-weight: bold;
 Margin: 5px;}
-Footer{background-color: RoyalBlue;
+
+Footer{background-color: Navy;
 width: 100%;
 Color: white;
 Text-align: center;}
@@ -48,6 +49,7 @@ nav ul li{ list-style-type: none;
 Display: inline-block;
 Padding: 5px;
 Margin: 10px;
+
 Align: center;}
 wrapper{
 Padding = "50px";
@@ -55,22 +57,24 @@ Text-align = "center";
 Background-color: SeaShell;}
 
 #myform{
-Background-color: PowderBlue;
+Background-color: CornflowerBlue;
 Text-align: center;
 Padding: 5px;
 Margin-left: 400px;
 Margin-right: 400px;
-Border: white;}
+Border: Navy;}
 
 .input_field input[type = "text"], .input_field textarea{
 Padding: 10px;
 Margin: 10px;
-Background-color: rgb(214, 245, 244);}
+Background-color: rgb(179, 218, 255);}
+
 #error_message{
-color: Crimson;}
+color: rgb(102, 0, 0);}
 
 input[type = submit]{
-Background-color: rgb(101, 133, 231);
+Background-color: Maroon;
+Color: white;
 Padding: 12px;
 Padding-left: 25px;
 Padding-right: 25px;
@@ -81,7 +85,7 @@ Cursor: pointer;}
 <body>
 <!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
 <header>
-<h1>Delhi</h1> 
+<h1 style = "color: White">Delhi</h1> 
 <nav>
 <ul>
  <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
