Update Level 2 - Lesson 9 -Delhi Street Food Page.html

--- a/Level 2 - Lesson 9 -Delhi Street Food Page.html
+++ b/Level 2 - Lesson 9 -Delhi Street Food Page.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <style>
-Header{background-color: DarkSalmon;
+body{background-color: rgb(163, 192, 245);}
+Header{background-color: Navy;
 Font-family: Times New Roman;
 Text-align: center;
 Width: 100%;
 Height: 120px;
 Font-weight: bold;
 Margin: 5px;}
-Footer{background-color: RoyalBlue;
+Footer{background-color: Navy;
 width: 100%;
 Color: white;
 Text-align: center;}
@@ -20,7 +21,7 @@ Margin: 10px;
 Align: center;}
 #shadow{
 Text-align: center;
-Text-shadow: 12px 12px 0px SkyBlue;}
+Text-shadow: 35px 18px 0px rgb(230, 0, 0);}
 .foodstyle{
 text-align: center;}
 .foodstyle img{
@@ -59,7 +60,7 @@ transform: rotate(12deg);}
 <!--For the first px of text shadow it is wether it goes left or right so - would be for the right and regular number would be left. So for top or bottom a regular number is bottom and - number would be top. Then you juts put 0px and the color-->
 <!--Putting ease means it going more smoothly or slowly, out without anything means it goes fast, so if you switch it out and write ease-out the ending will be smooth-->
 <header>
-<h1>Delhi</h1> 
+<h1 style = "color: White">Delhi</h1> 
 <nav>
 <ul>
  <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
@@ -69,7 +70,7 @@ transform: rotate(12deg);}
 </ul>
 </nav>
 </header>
-<h1 id="shadow">Street Food of Delhi</h1>
+<h1 id="shadow" style = "color: Maroon">Street Food of Delhi</h1>
 <br>
 <br>
 <div class = "foodstyle" align = "center">
