--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <title>Home Page</title>
 <style>
-Header{background-color: DarkSalmon;
+Header{background-color: Navy;
 Font-family: Times New Roman;
 Text-align: center;
 Width: 100%;
 Height: 120px;
 Font-weight: bold;
 Margin: 5px;}
-Footer{background-color: RoyalBlue;
+Footer{background-color: Navy;
 width: 100%;
 Color: white;
 Text-align: center;}
@@ -20,12 +20,12 @@ Background-image: url("0cc45283-city-32821-176ddb032b7.jpeg");
 Opacity: 1;
 Color: white;
 Background-size: cover;}
-.content{background-color: DarkSlateBlue;
+.content{background-color: rgb(102, 0, 0);
 Font-family: Georgia;
-Opacity: 0.9;
+Opacity: 0.75;
 Padding: 20px;}
-.information{Background: DarkBlue;
-color: white;
+.information{Background: Navy;
+color: BlanchedAlmond;
 Font-family: Georgia;
 Text-align: "center";
 Font-family: Arial;
@@ -33,7 +33,7 @@ padding: 20px;}
 
 h1{text-align: center;}
 h2{text-align: center;
-background-color: CornflowerBlue;}
+background-color: rgb(128, 191, 255);}
 
 nav ul li{ list-style-type: none;
 Display: inline-block;
@@ -51,7 +51,7 @@ Width: 50%;}
 <body>
 <!--You can put a:hover{color: Black; Text-decoration: underline;} if you want a cool hover effect on your links but it isn't working in this project-->
 <header>
-<h1>Delhi</h1> 
+<h1 style = "color: White">Delhi</h1> 
 <nav>
 <ul>
  <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
