Update Level 2 - Lesson 9 -Delhi Street Food Page.html

--- a/Level 2 - Lesson 9 -Delhi Street Food Page.html
+++ b/Level 2 - Lesson 9 -Delhi Street Food Page.html
@@ -30,7 +30,8 @@ Width: 210px;}
 .foodstyle img:hover{
 Height: 160px;
 Width: 220px;
-transform:rotate(13.5deg);}
+transform:rotate(13.5deg);
+Transition: transform 1s, width 1s, height 1s;}
 .img-overlap{
 Position: relative;
 Height: 140px;
@@ -41,17 +42,17 @@ Left: 35.5%}
 Position: absolute;
 Transition: opacity 1s ease-in-out;}
 .img-overlap img.top:hover{
-Opacity: 0;
+Opacity: 0;}
 
 .foodstyle2{
 text-align: center;}
 .foodstyle2 img{
 Height: 150px;
-Width: 235px;}
+Width: 235px;
+Transition: transform 1s, width 1s, height 1s;}
 .foodstyle2 img:hover{
 Height: 180px;
-Width: 270px;
-transform: rotate(12deg);}
+Width: 270px;}
 </style>
 </head>
 <body>
