Update Level 2 - Lesson 8 - Delhi Hotel Page.html

--- a/Level 2 - Lesson 8 - Delhi Hotel Page.html
+++ b/Level 2 - Lesson 8 - Delhi Hotel Page.html
@@ -46,6 +46,7 @@ Border-collapse: collapse;}
  <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
  <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
  <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
+ <li><a href = "Level 3 - Lesson 8 - Delhi FAQ Page.html" style = "color: white">FAQ Page</a></li>
 </ul>
 </nav>
 </header>
@@ -109,3 +110,6 @@ Border-collapse: collapse;}
 <h3>This website is made by <a href ="https://www.mindchamp.in" target = "_blank" style = "color: white">Mindchamp</a></h3></footer>
 </body>
 </html>
+
+
+
