--- a/Level 2 - Lesson 9 - Delhi Contact Us Page.html
+++ b/Level 2 - Lesson 9 - Delhi Contact Us Page.html
@@ -108,6 +108,7 @@ Animation: animation-animation 12s infinite;
  <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
  <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
  <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
+ <li><a href = "Level 3 - Lesson 8 - Delhi FAQ Page.html" style = "color: white">FAQ Page</a></li>
 </ul>
 </nav>
 </header>
