--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@ Footer{background-color: Navy;
 width: 100%;
 Color: white;
 Text-align: center;}
+
 .image{padding: 200px;
 Text-align: center;
 Background-image: url("0cc45283-city-32821-176ddb032b7.jpeg");
 Opacity: 1;
 Color: white;
 Background-size: cover;}
+
 .content{background-color: rgb(102, 0, 0);
 Font-family: Georgia;
 Opacity: 0.75;
@@ -46,6 +48,7 @@ Margin-left: auto;
 Margin-right: auto;
 Width: 50%;}
 
+
 </style>
 </head>
 <body>
@@ -58,6 +61,7 @@ Width: 50%;}
  <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
  <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
  <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
+ <li><a href = "Level 3 - Lesson 8 - Delhi FAQ Page.html" style = "color: white">FAQ Page</a></li>
 </ul>
 </nav>
 </header>
