Update Level 2 - Lesson 9 -Delhi Street Food Page.html

--- a/Level 2 - Lesson 9 -Delhi Street Food Page.html
+++ b/Level 2 - Lesson 9 -Delhi Street Food Page.html
@@ -24,23 +24,28 @@ Text-align: center;
 Text-shadow: 35px 18px 0px rgb(230, 0, 0);}
 .foodstyle{
 text-align: center;}
+
 .foodstyle img{
+Transition: transform 1s, width 1s, height 1s;
 Height: 150px;
 Width: 210px;}
+
 .foodstyle img:hover{
 Height: 160px;
 Width: 220px;
-transform:rotate(13.5deg);
-Transition: transform 1s, width 1s, height 1s;}
+transform:rotate(13.5deg);}
+
 .img-overlap{
 Position: relative;
 Height: 140px;
 Width: 235px;
 Margin: 5%;
 Left: 35.5%}
+
 .img-overlap img{
 Position: absolute;
 Transition: opacity 1s ease-in-out;}
+
 .img-overlap img.top:hover{
 Opacity: 0;}
 
