Update Level 2 - Lesson 8 - Delhi Hotel Page.html

--- a/Level 2 - Lesson 8 - Delhi Hotel Page.html
+++ b/Level 2 - Lesson 8 - Delhi Hotel Page.html
@@ -42,7 +42,7 @@ Border-collapse: collapse;}
 <h1 style = "color: White">Delhi</h1>
 <nav>
 <ul>
- <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
+ <li><a href = "index.html" style = "color: white">Home</a></li>
  <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
  <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
  <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
