Update Level 3 - Lesson 8 - Delhi FAQ Page.html

--- a/Level 3 - Lesson 8 - Delhi FAQ Page.html
+++ b/Level 3 - Lesson 8 - Delhi FAQ Page.html
@@ -85,7 +85,7 @@ $(this).find('span').text('-');
 <h1 style = "color: White">Delhi</h1>
 <nav>
 <ul>
- <li><a href = "index.html" style = "color: white">Home</a></li>
+ <li><a href = "Level 2 - Lesson 7 - Delhi Home Page.html" style = "color: white">Home</a></li>
  <li><a href = "Level 2 - Lesson 8 - Delhi Hotel Page.html" style = "color: white">Hotels</a></li>
  <li><a href = "Level 2 - Lesson 9 -Delhi Street Food Page.html" style = "color: white">Street Food</a></li>
  <li><a href = "Level 2 - Lesson 9 - Delhi Contact Us Page.html" style = "color: white">Contact Us</a></li>
@@ -97,17 +97,42 @@ $(this).find('span').text('-');
 <div class = "faq">
 <ul class = "faq2">
  <li class = "faq3">
-  <h3 class = "question">What is the name of the person who created this website?
+  <h3 class = "question">What is the best time to visit Delhi?
 <span>+</span></h3>
   <div class = "answer">
-   <p>My name is Kiara</p>
+   <p>The best time to visit Delhi is during the cooler months from October to March, when the weather is pleasant and ideal for sightseeing.
+</p>
   </div>
  </li>
  <li class = "faq3">
-  <h3 class = "question">How old is the person who created this website?
+  <h3 class = "question">What is the best way to get around Delhi?
  <span>+</span></h3>
   <div class = "answer">
-   <p>I am 12 years old</p>
+   <p>The best ways to get around Delhi are by using the Delhi Metro, which is efficient and covers most major areas, or by using ride-hailing apps like Uber and Ola. Auto-rickshaws and buses are also widely available.</p>
+  </div>
+ </li>
+<li class = "faq3">
+  <h3 class = "question">What languages are spoken in Delhi?
+<span>+</span></h3>
+  <div class = "answer">
+   <p>Hindi is the most widely spoken language in Delhi. However, English is also widely understood and used, especially in tourist areas and by service providers.
+</p>
+  </div>
+ </li>
+<li class = "faq3">
+  <h3 class = "question">What emergency numbers should I know while in Delhi?
+<span>+</span></h3>
+  <div class = "answer">
+   <p>Important emergency numbers include 112 for general emergencies, 100 for the police, 101 for the fire department, and 102 for ambulance services.
+</p>
+  </div>
+ </li>
+<li class = "faq3">
+  <h3 class = "question">Do I need to tip in restaurants and hotels in Delhi?
+<span>+</span></h3>
+  <div class = "answer">
+   <p>Tipping is appreciated but not mandatory in Delhi. In restaurants, a tip of 5-10% of the bill is standard. In hotels, you can tip porters and housekeeping staff around ₹50-₹100.
+</p>
   </div>
  </li>
 </ul>
